# radix-dropdown-menu-demo

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
crates/checkbox/: Cargo.toml
crates/checkbox/src/: checkbox.rs
crates/direction/src/: direction.rs
crates/dropdown-menu/: Cargo.toml
crates/dropdown-menu/src/: dropdown_menu.rs  lib.rs
crates/id/src/: id.rs
crates/menu/: Cargo.toml
crates/menu/src/: menu.rs
crates/popper/: Cargo.toml
crates/popper/src/: popper.rs
crates/portal/: Cargo.toml
crates/portal/src/: portal.rs
crates/presence/: Cargo.toml
crates/presence/src/: presence.rs  presence.rs.bak  use_state_machine.rs
crates/remove-scroll/leptos/: Cargo.toml
crates/remove-scroll/leptos/src/: lib.rs  sidecar.rs  types.rs
crates/remove-scroll/leptos/src/components/: mod.rs  remove_scroll.rs
crates/remove-scroll/leptos/src/utils/: aggressive_capture.rs  mod.rs  pinch_and_zoom.rs  scroll.rs  touch.rs
crates/remove-scroll/leptos/tests/: integration.rs
crates/use-controllable-state/src/: use_controllable_state.rs
crates/use-previous/src/: use_previous.rs
crates/use-size/: Cargo.toml
crates/use-size/src/: use_size.rs
demo/: .gitignore  Cargo.toml
demo/public/: styles.css
demo/src/: dashboard.rs  demo.rs  lib.rs  main.rs  utils.rs
demo/src/components/: mod.rs
demo/src/components/hooks/: mod.rs  use_is_mobile.rs  use_keypress.rs
demo/src/components/navigation/: app_sidebar.rs  mod.rs  nav_main.rs  nav_user.rs  page_header.rs  team_switcher.rs
demo/src/components/ui/: avatar.rs  breadcrumb.rs  button.rs  collapsible.rs  dropdown_menu.rs  mod.rs  separator.rs  sheet.rs  sidebar.rs
